<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/textviewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_edit_email"
            style="@style/EditTextTheme"
            android:inputType="textEmailAddress"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textViewSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passord_text"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hint_edit_password"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_title_login_fragment"
            style="@style/ButtonTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCriarConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_login_fragment"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewRecuperarConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_recover_login_fragment"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            tools:visibility="visible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Pedro Henrique Neumann Rezende"
            android:textSize="18dp"
            android:textColor="@color/white"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>